scribble-cli/src/test/resources/bad/liveness/roleprog/unfair/Test02.scr
module bad.liveness.roleprog.unfair.Test02;


// OK if -fair
// Cf. good.wfchoice.gchoice.Choice11;
global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		1() from A to C;  // bad liveness
		choice at A
		{
			1() from A to C;
			continue X;
		}
		or
		{
			2() from A to B;
			2() from A to C;
		}
	}
}


